kubernetes/manifests/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8080'
      # metallb.universe.tf/allow-shared-ip: "192.168.86.220"
spec:
  selector:
    app: jenkins-server
  # type: LoadBalancer
  ports:
    - name: jenkins
      port: 8080
      targetPort: 8080
      protocol: TCP
