kubernetes/manifests/jenkins/ingressRoute.yaml
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: http-ingress
# spec:
#   ingressClassName: nginx # use only with k8s version >= 1.18.0
#   tls:
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: jenkins-service
#             port:
#               number: 8080

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jenkins.local.timmybtech.com`) # create A record in pihole
      kind: Rule
      services:
        - name: jenkins-service
          port: 8080
  tls:
    secretName: local-timmybtech-com-tls # or local-example-com-staging-tls
